@@ -1,3 +1,4 @@
+* Allow to disable sorting of dictionary field's selection
 * Add active field to views of action window
 * Make global cache depends on explicit context keys
 * Don't add to global cache Binary fields
